--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/Shenggang/animalsound
 BugReports: https://github.com/Shenggang/animalsound/issues
+Imports: 
+    cli,
+    purrr,
+    rlang
